[project]
name = "customer-support-sla-openenv"
version = "1.0.0"
description = "OpenEnv customer support SLA environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "pydantic==2.10.6",
  "openai>=2.7.2",
  "PyYAML==6.0.2",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
